Final project update

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -4,90 +4,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Todo\n",
-    "* ~How do we keep an option to hover on the countries that have no data?~\n",
-    "* ~How do we hide the countries from the map that are *never* a part of the datasets? (Russia, Iceland etc)~\n",
-    "* How do we make a slider work?\n",
-    "* Should we do a \"dias show\"? In that case: How?\n",
-    "* Which datasets should we work with and which points do we want to make?\n",
-    "\n",
-    "### Motivation\n",
+    "# 1 Motivation\n",
     "<!-- What is your dataset?\n",
     "Why did you choose this/these particular dataset(s)?\n",
     "What was your goal for the end user's experience?\n",
     " -->\n",
     " \n",
-    "The datasets used for this project comes from the European Monitoring Centre for Drugs and Drug Addiction (EMCDDA) and can be found at:\n",
     "\n",
-    "WE NEED TO SPECIFY OUR DATASETS\n",
-    "* \n",
-    "* \n",
-    "* \n",
+    "## 1.1 The datasets\n",
+    "For this project, we wanted to work on multiple different datasets and see what connections we could find between them. The majority of the datasets are from European Monitoring Centre for Drugs and Drug Addiction, while other \"basic\" data like population growth came from other sources.\n",
     "\n",
-    "The datasets were initially chosen because they could provide some insight into the market trends for illegal drug trafficking which was interesting as the initial idea was to use the data for recommending the location and type of drug to start trafficking. As funny as the joke was, it was decided to change focus to something less illegal with greater benefits for society.\n",
+    "An overview of the relevant datasets can be found below:\n",
     "\n",
-    "The end goal then became to showcase societal consequences of drug trends of EU and European countries might learn from each other to combat the rising trend.\n",
+    "INDSÆT TABEL!!!!\n",
     "\n",
-    "### Basic stats\n",
+    "* Drug overdose deaths in Europe (EMCDDA 2020 Statistical Bulletin): https://www.emcdda.europa.eu/data/stats2020/drd\n",
+    "* Drug law offences in Europe (EMCDDA 2020 Statistical Bulletin): https://data.europa.eu/data/datasets/drug-law-offences-in-europe-emcdda-2020-statistical-bulletin?locale=en\n",
+    "* Eurobarometer 330: https://data.europa.eu/data/datasets/s1006_330?locale=en\n",
+    "* Eurobarometer 401: https://data.europa.eu/data/datasets/s2029_401?locale=en\n",
+    "\n",
+    "## 1.2 Why\n",
+    "The datasets were initially chosen because they could provide some insight into the market trends for illegal drug trafficking which was interesting as the initial idea was to use the data for recommending the location and type of drug to start trafficking. \n",
+    "\n",
+    "As funny as the joke was, it was decided to change focus to something less illegal with greater benefits for society.\n",
+    "\n",
+    "## 1.3 End goal\n",
+    "The end goal then became to showcase societal consequences of drug trends of EU and European countries might learn from each other to combat the rising trend. It was also to work on making a persuasive visualization, capable of showing the difference in handling of drugs across countries.\n",
+    "\n",
+    "# 2 Basic stats\n",
     "<!-- Write about your choices in data cleaning and preprocessing\n",
     "Write a short section that discusses the dataset stats, containing key points/plots from your exploratory data analysis. -->\n",
     "\n",
-    "WE NEED TO DO A EXPLORATORY DATA ANALYSIS\n",
+    "## 2.1 Data Cleaning\n",
+    "The data was often in a trends-format and needed a lot of cleaning to be useful. We utilized the following methods:\n",
+    "1. Re-organizing the dataset\n",
+    "2. Removing NaN\n",
+    "3. Renaming data to ensure merge\n",
     "\n",
-    "\n",
-    "### Data analysis\n",
-    "<!-- Describe your data analysis and explain what you've learned about the dataset.\n",
-    "If relevant, talk about your machine-learning. -->\n",
-    "\n",
-    "WHAT KIND OF DATA ANALYSIS ARE WE DOING?\n",
-    "\n",
-    "\n",
-    "### Genre\n",
-    "<!-- Which genre of data story did you use?\n",
-    "Which tools did you use from each of the 3 categories of Visual Narrative (Figure 7 in Segal and Heer). Why?\n",
-    "Which tools did you use from each of the 3 categories of Narrative Structure (Figure 7 in Segal and Heer). Why? -->\n",
-    "\n",
-    "The data story primarily uses the Slide Show genre for narrating the story to the end user, as the visualizations and its accompanying text are contained in a clear sequence of narrative events.\n",
-    "Using the website for scrolling through the sequence of the story creates a consistent visual platform for helping the viewer orientate and track his/her progress through the visualizations.\n",
-    "\n",
-    "WE COULD DO SOME HIGHLIGHTING \n",
-    "\n",
-    "LET'S CREATE THE MOTION BETWEEN EACH SECTION FOR ANIMATED TRANSISTIONS\n",
-    "\n",
-    "Linear\n",
-    "Hovering, filtering\n",
-    "Captions and headlines, annotations etc\n",
-    "\n",
-    "<!-- As the user steps through the presentation, the visualization main-tains aconsistent visual platform, changing only the content withineach panel while leaving the general layout of the visual elements in-tact. Each new slide alters the text in the left panel, while updating thechart in the right panel with animated transitions. A narrative is com-municated clearly through the interaction of the text in the left panelwith the annotations and graphic elements in the right panel, each en-riching the narrative throughmulti-messaging, providing related butdifferent  information  [20].   -->\n",
-    "\n",
-    "### Visualizations\n",
-    "<!-- \n",
-    "Explain the visualizations you've chosen.\n",
-    "Why are they right for the story you want to tell? -->\n",
-    "\n",
-    "Sometimes there is only a specific number that needs communicating. Instead of using graphs and charts, using the number directly puts more focus on the number and removes any clutter there else could be if other kinds of visualizations was used.\n",
-    "For plotting continous data, line graphs are used, as the line that connects the points are physically connected implying a connection.\n",
-    "\n",
-    "### Discussion\n",
-    "<!-- Think critically about your creation\n",
-    "\n",
-    "What went well?,\n",
-    "What is still missing? What could be improved?, Why? -->\n",
-    "\n",
-    "### Contributions\n",
-    "<!-- Who did what?\n",
-    "\n",
-    "You should write (just briefly) which group member was the main responsible for which elements of the assignment. (I want you guys to understand every part of the assignment, but usually there is someone who took lead role on certain portions of the work. That's what you should explain). -->"
+    "### 1. Re-organizing the dataset\n",
+    "An example is the drug number of drug offences:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
-    }
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -194,11 +155,327 @@
        "2   6167.0   6577.0   5149.0   4185.0   4301.0          NaN  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "import pandas as pd\n",
+    "pd.read_csv(\"drug_offences.csv\", sep=\";\").head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to use the data properly, the data needed to be transformed from a grid-format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>offences</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>47880.0</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>54749.0</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bulgaria</td>\n",
+       "      <td>2382.0</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Croatia</td>\n",
+       "      <td>11179.0</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cyprus</td>\n",
+       "      <td>1168.0</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Czechia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Country  offences  Year\n",
+       "0   Austria   47880.0  2018\n",
+       "1   Belgium   54749.0  2018\n",
+       "2  Bulgaria    2382.0  2018\n",
+       "3   Croatia   11179.0  2018\n",
+       "4    Cyprus    1168.0  2018\n",
+       "5   Czechia       NaN  2018"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df = []\n",
+    "\n",
+    "for col, data in df.items():\n",
+    "    if not re.search('[a-zA-Z]', col) == None:\n",
+    "        continue\n",
+    "    new_df.append([data.index.to_list(), data.values.tolist(), [data.name]*len(df)])\n",
+    "\n",
+    "liist = [list(zip(x,y,z)) for x, y, z in new_df]\n",
+    "newlist = [item for items in liist for item in items]\n",
+    "large_df = pd.DataFrame(newlist, columns=[\"Country\", \"offences\", \"Year\"])\n",
+    "large_df.head(6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Removing NaN's\n",
+    "At this point, many NaN's were still present. Therefore, we chose to remove the rows containing NaN's."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>offences</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>47880.0</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>54749.0</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bulgaria</td>\n",
+       "      <td>2382.0</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Croatia</td>\n",
+       "      <td>11179.0</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cyprus</td>\n",
+       "      <td>1168.0</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Country  offences  Year\n",
+       "0   Austria   47880.0  2018\n",
+       "1   Belgium   54749.0  2018\n",
+       "2  Bulgaria    2382.0  2018\n",
+       "3   Croatia   11179.0  2018\n",
+       "4    Cyprus    1168.0  2018"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "large_df = large_df.dropna()\n",
+    "large_df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another key step was ensuring that the different datasets could be merged properly. This was ensured through casting the columns as specific data types as well as specifying which columns to merge upon.\n",
+    "### 3. Renaming Values\n",
+    "In some datasets, countries had different names (e.g. \"czechia\" vs \"Czech Republic\"). In those cases, we renamed the values to ensure that the same country had only one name across datasets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2 Dataset stats\n",
+    "\n",
+    "For each of the datasets shown above, a quick overview of the basic stats can be found below:\n",
+    "\n",
+    "| Name | Number of rows | Number of NaN's | Mean | Median |   |   |\n",
+    "|------|----------------|-----------------|------|--------|---|---|\n",
+    "|      |                |                 |      |        |   |   |\n",
+    "|      |                |                 |      |        |   |   |\n",
+    "|      |                |                 |      |        |   |   |\n",
+    "|      |                |                 |      |        |   |   |\n",
+    "|      |                |                 |      |        |   |   |\n",
+    "\n",
+    "\n",
+    "# 3 Data analysis\n",
+    "<!-- Describe your data analysis and explain what you've learned about the dataset.\n",
+    "If relevant, talk about your machine-learning. -->\n",
+    "WHAT KIND OF DATA ANALYSIS ARE WE DOING?\n",
+    "## 3.1 What we've learned about the datasets\n",
+    "\n",
+    "\n",
+    "\n",
+    "## 3.2 Machine-learning\n",
+    "CHRISTIAN POULSEN\n",
+    "\n",
+    "# 4 Genre\n",
+    "<!-- Which genre of data story did you use?\n",
+    "Which tools did you use from each of the 3 categories of Visual Narrative (Figure 7 in Segal and Heer). Why?\n",
+    "Which tools did you use from each of the 3 categories of Narrative Structure (Figure 7 in Segal and Heer). Why? -->\n",
+    "\n",
+    "The data story primarily uses the Slide Show genre for narrating the story to the end user, as the visualizations and its accompanying text are contained in a clear sequence of narrative events.\n",
+    "Using the website for scrolling through the sequence of the story creates a consistent visual platform for helping the viewer orientate and track his/her progress through the visualizations.\n",
+    "\n",
+    "## 4.1 Tools from Visual Narrative\n",
+    "\n",
+    "## 4.2 Tools from Narrative Structure\n",
+    "\n",
+    "WE COULD DO SOME HIGHLIGHTING: We've done that using \"Look at Portugal\"\n",
+    "\n",
+    "LET'S CREATE THE MOTION BETWEEN EACH SECTION FOR ANIMATED TRANSISTIONS\n",
+    "\n",
+    "Linear\n",
+    "Hovering, filtering\n",
+    "Captions and headlines, annotations etc\n",
+    "\n",
+    "<!-- As the user steps through the presentation, the visualization main-tains aconsistent visual platform, changing only the content withineach panel while leaving the general layout of the visual elements in-tact. Each new slide alters the text in the left panel, while updating thechart in the right panel with animated transitions. A narrative is com-municated clearly through the interaction of the text in the left panelwith the annotations and graphic elements in the right panel, each en-riching the narrative throughmulti-messaging, providing related butdifferent  information  [20].   -->\n",
+    "\n",
+    "# 5 Visualizations\n",
+    "<!-- \n",
+    "Explain the visualizations you've chosen.\n",
+    "Why are they right for the story you want to tell? -->\n",
+    "\n",
+    "Sometimes there is only a specific number that needs communicating. Instead of using graphs and charts, using the number directly puts more focus on the number and removes any clutter there else could be if other kinds of visualizations was used.\n",
+    "\n",
+    "For plotting continous data, line graphs are used, as the line that connects the points are physically connected implying a connection.\n",
+    "\n",
+    "## 5.1 Explanation of visualizations\n",
+    "Our visualizations were mostly guided towards non-technical people who are not used to seeing complex data visualisation.\n",
+    "\n",
+    "\n",
+    "## 5.2 Why are they right?\n",
+    "\n",
+    "\n",
+    "# 6 Discussion\n",
+    "<!-- Think critically about your creation\n",
+    "\n",
+    "What went well?,\n",
+    "What is still missing? What could be improved?, Why? -->\n",
+    "\n",
+    "## 6.1 What went well\n",
+    "\n",
+    "## 6.2 What is missing\n",
+    "\n",
+    "# 7 Contributions\n",
+    "<!-- Who did what?\n",
+    "\n",
+    "You should write (just briefly) which group member was the main responsible for which elements of the assignment. (I want you guys to understand every part of the assignment, but usually there is someone who took lead role on certain portions of the work. That's what you should explain). -->\n",
+    "* Christian Bøgelund was responsible for performing the data analysis as well as the visualizations and gaining an overview of the data at hand\n",
+    "* Christian Poulsen was mainly responsible for understanding the storyline and graphs needed to support that storyline\n",
+    "* Beta Ntakiyimana was responsible for setting up the website and embedding the graphs "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import plotly.express as px\n",
@@ -9007,7 +9284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   },
   "pycharm": {
    "stem_cell": {
