Added text to ML

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,7 +47,7 @@
     "As funny as the joke was, it was decided to change focus to something less illegal with greater benefits for society.\n",
     "\n",
     "## 1.3 End goal\n",
-    "The end goal then became to showcase societal consequences of drug trends of EU and European countries might learn from each other to combat the rising trend. \n",
+    "The end goal then became to showcase societal consequences of drug trends of EU and that European countries might learn from each other to combat the rising trend. \n",
     "\n",
     "Another end goal was to work on making a persuasive visualization, capable of showing the difference in handling of drugs across countries.\n",
     "\n",
@@ -3715,7 +3714,15 @@
     "\n",
     "\n",
     "## 3.2 Machine-learning\n",
-    "CHRISTIAN POULSEN\n",
+    "None machine learning (ML) tecniques have been applied to this project as there was no apparent way to use it usefully.\n",
+    "Most, if not all, of the data is about the output which, if ML was used, were going to be the outcome of the prediction or classification. To create a useful model, sufficient input data with a strong pattern is needed. This would quickly become a huge task in itself, as the data we are using is the ouput of highly complex social and societal dynamical systems. Therefor we deemed it too out of scope for this assignment to theorize what casuses what, and finding enough of the needed data.\n",
+    "\n",
+    "Eg. if we wanted to predict the amount of ODs in 2025, then instead of using ML then, because of the complexity of the subject, it would probably be more accurate, however uncertain it then may be, to just make a classic trend forecasting.\n",
+    "\n",
+    "The two major reasons why ML is not applied to this project is because:\n",
+    "* The output is too complex\n",
+    "* There is too little valuable data for pattern recognition\n",
+    "\n",
     "\n",
     "# 4 Genre\n",
     "<!-- Which genre of data story did you use?\n",
@@ -3730,8 +3737,6 @@
     "## 4.2 Tools from Narrative Structure\n",
     "\n",
     "WE COULD DO SOME HIGHLIGHTING: We've done that using \"Look at Portugal\"\n",
-    "\n",
-    "LET'S CREATE THE MOTION BETWEEN EACH SECTION FOR ANIMATED TRANSISTIONS\n",
     "\n",
     "Linear\n",
     "Hovering, filtering\n",
@@ -3795,7 +3800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   },
   "pycharm": {
    "stem_cell": {
