Added text to 3.1

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -3709,9 +3709,12 @@
     "# 3 Data analysis\n",
     "<!-- Describe your data analysis and explain what you've learned about the dataset.\n",
     "If relevant, talk about your machine-learning. -->\n",
-    "WHAT KIND OF DATA ANALYSIS ARE WE DOING?\n",
     "## 3.1 What we've learned about the datasets\n",
-    "The main learning with this data is how much information is currently missing about European use of drugs.\n",
+    "Working with the datasets, we have had a number of interesting learnings:\n",
+    "* Missing data\n",
+    "* Portugal, Belgium and Spain\n",
+    "\n",
+    "The main learning is how much information is currently missing about European use of drugs. While most countries have a lot of data about prices of cocaine, many are missing within methamphetamine.\n",
     "\n",
     "\n",
     "## 3.2 Machine-learning\n",
@@ -3777,6 +3780,12 @@
     "* Christian Poulsen was mainly responsible for understanding the storyline and graphs needed to support that storyline\n",
     "* Beta Ntakiyimana was responsible for setting up the website and embedding the graphs "
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
