--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -10057,18 +10057,25 @@
     "Which tools did you use from each of the 3 categories of Visual Narrative (Figure 7 in Segal and Heer). Why?\n",
     "Which tools did you use from each of the 3 categories of Narrative Structure (Figure 7 in Segal and Heer). Why? -->\n",
     "\n",
-    "The data story primarily uses the Slide Show genre for narrating the story to the end user, as the visualizations and its accompanying text are contained in a clear sequence of narrative events.\n",
-    "Using the website for scrolling through the sequence of the story creates a consistent visual platform for helping the viewer orientate and track his/her progress through the visualizations.\n",
+    "The data story primarily uses the Interactive Slide Show genre for narrating the story to the reader, as the interactive visualizations and its accompanying text are contained in a clear sequence of narrative events. Using the website for scrolling through the sequence of the story creates a consistent visual platform for helping the viewer orientate and track their progress through the visualizations. Furthermore, by using interactive slide show, we get a more balanced mix of author- and reader-driven approach, while still having a linear order of scenes.\n",
     "\n",
     "## 4.1 Tools from Visual Narrative\n",
     "\n",
+    "Visual Narrative consists of the 3 categories **Visual Structuring**, **Highlighting** and **Transition Guidance**, each containing tools for improving the readers experience while following the data story. From the category visual structuring “consistent visual platform” is used, to give the reader a sense of familiarity throughout the story line. Each “slide” in the slide show consists of a visual and some accompanying text explaining the main observation, thereby ensuring that the layout structure is kept consistent. However, to make for a more dynamic and interesting read, the side on which the visualization (right or left) is placed varies. \n",
+    "\n",
+    "From the category highlights “feature distinction”, “character direction”, “Motion” and “zooming” is used. Feature distinction, character direction and motion are used in combination of each other. The focus of our story is comparing Portugal’s efforts against drugs to the rest of the countries in the EU, therefore using feature distinction to highlight Portugal in a visualization animated to show the progress over time, gives the reader an idea of what to especially notice when looking through the visualizations, which can also be classified as character direction. Zooming comes in play when getting an overview of the countries in Europa who uses the most amount of drugs. This allows the user to highlight countries they themselves find interesting, which offers a bit more independent exploration of the data.\n",
+    "\n",
+    "In regard to transition guidance, we make use of “familiar objects” with cuts. There are no animation between slides, but by having a consistent layout, the reader has no problem getting an initial overview of the slide. \n",
+    "\n",
+    "\n",
     "## 4.2 Tools from Narrative Structure\n",
     "\n",
-    "WE COULD DO SOME HIGHLIGHTING: We've done that using \"Look at Portugal\"\n",
+    "From the Narrative Structure we have the 3 categories **Ordering**, **Interactivity** and **Messaging**, each enhancing the degree of which the reader is able to explore the visualizations for themselves. From the category ordering the tool “Linear” path is used. This is preferred since we want to make sure that the main purpose of the story is not missed by the reader. Furthermore, by having a linear path, we ensure that no observation leading to our conclusion is overlook or skipped. \n",
     "\n",
-    "Linear\n",
-    "Hovering, filtering\n",
-    "Captions and headlines, annotations etc\n",
+    "The tools used in the category interactivity are “Hover details” (details on demand), “Filtering” and “Explicit Instructions”. Hover detail are used in almost every single visualization. Hover detail allows us to have a lot of information, which is only displayed when selected by the user, which means that the visualization is kept simple, only necessary information to get to the main point are displayed, but if the reader is curious, they have the option to see the individual data points. The same argument can be use with filtering. We primarily use filtering to deselect or select countries we find interesting to dive into. Explicit instructions are used once. The reader is instructed to start an animation of Portugal’s number of overdoses and infections diseases compared to the rest of EU, and especially focus on the progress of Portugal. This is done to make the development of Portugal apparent for the reader, since this is an important part of our conclusion. \n",
+    "\n",
+    "Finally, we have the category messaging, where the tools used are “Captions/Headlines”, “Annotations” and “Summary”.  Captions, annotations and summaries play a crucial part in getting our points from the visualizations across. We want the reader to be able to explore the visualizations, but by having annotations and summaries we make sure that the reader also understands the build up to the next slide. \n",
+    "\n",
     "\n",
     "<!-- As the user steps through the presentation, the visualization main-tains aconsistent visual platform, changing only the content withineach panel while leaving the general layout of the visual elements in-tact. Each new slide alters the text in the left panel, while updating thechart in the right panel with animated transitions. A narrative is com-municated clearly through the interaction of the text in the left panelwith the annotations and graphic elements in the right panel, each en-riching the narrative throughmulti-messaging, providing related butdifferent  information  [20].   -->\n",
     "\n",
@@ -10138,7 +10145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.3"
   },
   "pycharm": {
    "stem_cell": {
